--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc., Tailwind, TailwindCSS, Tailwind CSS 3">
+  <meta name="description" content="An Admin CMS">
   <meta name="author" content="Coderthemes">
-  <title>Attex React - Responsive Tailwind CSS 3 Admin Dashboard</title>
+  <title>CMS</title>
   <style>
     #splash-screen {
       position: fixed;
@@ -45,6 +45,7 @@
   <div id="splash-screen">
     <img alt="Logo" class="light" src="/images/logo-dark.png" style="height: 10%;" />
   </div>
+  <script src="/public/assets/js/init.js"></script>
   <script type="module" src="/src/index.tsx"></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <script>
