--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
   <div id="root"></div>
   <div id="splash-screen">
-    <img alt="Logo" class="light" src="/images/logo-dark.png" style="height: 10%;" />
+    <img alt="Logo" class="light" src="/images/logo_b.png" style="height: 5%;" />
   </div>
   <script src="/public/assets/js/init.js"></script>
   <script type="module" src="/src/index.tsx"></script>
